--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Shop</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -17,12 +18,10 @@
         <hr style="margin-left: 6px; margin-right: 6px; margin-top: 8px;"><hr style="margin-left: 6px; margin-right: 6px;">
 
         <div class="motto">
-            <h1 style="margin-top: 30px; margin-left: 20%; 
-            margin-right: 20%; font-family:Georgia, 'Times New Roman', Times, serif; text-align: center; color: 
-            rgb(7, 7, 10); color: rgb(31, 31, 73);">SMART, QUALITY & CONVENIENT <br>!!</h1>
+            <h1 style="">SMART, QUALITY & CONVENIENT <br>!!</h1>
         </div>
 
-        <div class="desc" style="margin-top: 30px; text-align: center; font-size: 20px;">
+        <div class="desc" style="">
             <p>Welcome to our online shop and get fresh groceries and household essentials. 
             <br>Our items range from wholesome bread and organic milk to farm-fresh fruits, 
             our products are of high-quality and sold at affordable prices. 
